syntax = "proto3";

package ru.otus.andrk.protobuf.generated;

option java_multiple_files = true;

message RangeMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message ValueMessage{
    int32 currentValue = 1;
}

message Empty {}

service NumberGeneratorService {
    rpc generateRange(RangeMessage) returns (stream ValueMessage);


}
